# ATT

./: CMakeLists.txt  compile.sh  setup.py
ATT_kernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Block/: setup.py  test.py
Block/TMM_block.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Block/TMM_block_v2.egg-info/: PKG-INFO  SOURCES.txt
Block/TMM_block_v3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Block/include/: example.h
Block_gpu/: setup.py
Block_gpu/ATT_Block_gpu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
benchmark-v3/: compile.sh  nohup.out  setup.py  test.py
benchmark-v3/TMM_v3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
benchmark-v3/TMM_v4.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
benchmark-v3/sddmm-benchmark/: CMakeLists.txt
benchmark-v3/sddmm-benchmark/include/: compute_utils.h  output_tile copy.h  output_tile.h
benchmark-v3/sddmm-benchmark/mGAT.egg-info/: SOURCES.txt
benchmark-v3/sddmm-benchmark/test/sddmm_fp16/: test_sddmm_fp16.py  test_sddmm_fp16_att.py  test_sddmm_fp16_att_v2.py  test_sddmm_fp16_ones.py
benchmark-v3/sddmm-benchmark/test/sddmm_tf32/: test_sddmm_tf32.py  test_sddmm_tf32_att.py  test_sddmm_tf32_att_v2.py  test_sddmm_tf32_ones.py
benchmark-v3/spmm-benchmark/: CMakeLists.txt  test.py
benchmark-v3/spmm-benchmark/include/: dense_tile copy 2.h  dense_tile copy 3.h  dense_tile copy 4.h  dense_tile copy.h  dense_tile.h
benchmark-v3/spmm-benchmark/test/spmm_fp16/: test_spmm_h_m.py  test_spmm_h_m_ones.py  test_spmm_m_h.py  test_spmm_m_h_ones.py
benchmark-v3/spmm-benchmark/test/spmm_tf32/: test_spmm_h_m.py  test_spmm_h_m_ones.py  test_spmm_m_h.py  test_spmm_m_h_ones.py
end2end_acc/: mgat32.csv
end2end_acc/gat_acc_final/: eva_gat_100.py
end2end_acc/gat_final/: eva_gat_100.py
end2end_acc/gatv2_acc_final/: eva_gatv2_100.py
end2end_acc/gatv2_final/: eva_gat_100.py  eva_gat_100_pyg.py  eva_gat_a800.py  eva_gat_a800_pyg.py
end2end_break/gat_final/: eva_gat_100.py  eva_gat_100_dgl.py  eva_gat_100_pyg.py  eva_gat_plot.py  eva_gat_plot1.py  gat_exe.sh  (+1 more)
end2end_overhead/: plan.md  plot copy.py  plot.py
gcn/: setup.py
profile/: profile.py  python.py
(+453 files in other folders)
